styles/app.scss
@import 'base';

* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    overflow: hidden;
}

body {
	user-select: none;
    margin: 0;
    padding: 0;
    background-color: white;
    word-wrap: break-word;
    text-size-adjust: none;
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    position: relative;
}

a {
	color: #999;
}

/*--------------------- Vistas ---------------------------*/

.view {
    transition-duration: 300ms;
    position: absolute;
    width: 100%;
    top: $header-height;
	bottom: 0;
	left: 0;
	right: 0;
    z-index: 1;
    overflow-y: auto;
    -webkit-overflow-scrolling: touch;
}

.main-view,
.detail-view {
    perspective: 1000;
    backface-visibility: hidden;
    background-color: whiteSmoke;
}

.main-view {
    transform: translate3d(-100%, 0, 0);
}

.detail-view {
    transform: translate3d(100%, 0, 0);
}

.wrapper {
    height: 100%;
    overflow-x: hidden;
	overflow-y: auto;
    position: relative;
    -webkit-overflow-scrolling: touch;
}

/*--------------------- Comentarios ----------------------*/

#detail-wrap > section > .comment-wrap {

	padding-right: 10px;

	> div:first-child {
	    padding: 10px 10px 0 10px;
	    margin: -10px -10px 0;
	    border-top: 1px solid #eee;
	}
}

.comment-wrap {
    user-select: text;
    padding: 10px 0 10px 10px;
    border-bottom: 1px solid #eee;
    border-left: 1px solid #eee;
}

.comment-data {
	display: flex;
    justify-content: space-between;
	width: 100%;
}

$comments-red: #D43030;

.comment-author p {
	color: $comments-red;
	font-weight: 500;
    margin: 0;
}

.comment-poster {
    position: relative;

    &::before {
        content: 'OP';
        position: absolute;
        top: 0;
        left: 0;
        color: $comments-red;
        border: 1px solid $comments-red;
        padding: 2px 3px;
        border-radius: 2px;
        font-size: 10px;
        font-weight: 700;
    }

    p {
        color: $comments-red;
        font-weight: 500;
        position: relative;
        left: 28px;
    }
}

.comment-info {
}

.comment-info a {
	color: #aaa;
	font-weight: 500;
	text-decoration: none;
}

.comment-body p {
	margin: 10px 0;
	color: #3D525E;
}

#link-summary {
	background-color: #777;
	padding: 10px 0 0;

    &:before {
        content: '';
        position: absolute;
        @include size(100%, 300px);
        background-color: #777;
        transform: translate3d(0, -300px, 0);
        background-image: url('../img/alienHead.png');
        background-repeat: no-repeat;
        background-position-x: 50%;
        background-position-y: 90%;
        background-size: 25%;
    }

    p {
        margin: 0;
        padding-left: 10px;
    }

    a {
        text-decoration: none;
    }
}

#summary-title {
    font-size: 16px;
    color: #fafafa;
    font-weight: 700;
    padding-right: 10px;
    padding-bottom: 2px;
}

#summary-time {
	color: white;
	text-align: center;
}

#summary-domain {
	color: #F75433;
	font-weight: 700;
	font-size: 13px;
	display: inline;
}

#summary-author {
    color: #E2E2E0;
	font-weight: 700;

}

#share-tw {
	/* Share button position */
    margin-right: 10px;
}

#summary-sub {
	color: #FAFAFA;
	text-align: left;
}

#summary-comment-num {
	text-align: right;
	text-decoration: none;
	display: block;
}

#summary-extra {
    display: flex;
    background-color: #333;
    font-weight: 700;
    padding: 0 10px;
    width: 100%;
}

#summary-extra p,
#summary-comment-num {
    color: #FAFAFA;

    margin: 0;
    padding: 5px 0;
    width: 33%;
}

#summary-footer {
    display: flex;
    justify-content: space-between;
    padding-bottom: 10px;
    padding-top: 2px;
}

#selftext {
	user-select: text;
	padding: 10px;
	margin: 10px;
	border-radius: 5px;
	background-color: #DDD;

	p {
		margin-top: 5px;

		&:last-child {
			margin-bottom: 5px;
		}
	}
}

.image-preview {
    @include size(100%, auto);
    padding: 10px;
    margin: 0 auto;
    display: block;
}

#main-menu {
	box-shadow: inset -3px 0 10px black;
	height: calc(100% - 32px);
}

.main-view.show-menu {
    transform: translate3d(140px, 0px, 0px);
}

#main-overflow {
	width: 100%;
}

@import 'buttons';
@import 'menu';
@import 'link';

/*---------------------------- Cabecera -----------------------------*/

header {
    @include size(100%, 44px);
    display: flex;
    align-content: center;
    top: 0;
    position: fixed;
    z-index: 2;
    border-bottom: 1px solid #777;
    border-top: 1px solid white;
    background-color: #eff0f3;
    background-image: url(../img/bg.png);
    box-shadow: 0 -25px 24px -10px rgba(0, 0, 0, .3) inset;

    > div {
        width: 70%;
	}
}

#title {
    color: #333;
    text-shadow: 0 1px 1px white;
    text-align: center;
    font-size: 20px;
    line-height: $header-height;
    width: 100%;
    margin: 0;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    font-weight: 700;
    cursor: default;
}

#header-icon {
    @include size(36px, $header-height);
    background-image: url('../img/alienHead.png');
    background-size: 36px;
    background-repeat: no-repeat;
    background-position: 50%;
    margin: 0 auto;
}

#main-title {
    transition-duration: 300ms;
    position: fixed;
    width: 40%;
    font-size: 15px;
    top: 12px;
    font-weight: 700;
    cursor: default;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

#sub-title {
    margin: 0 0 0 5px;
    padding: 0 5px;
    color: #333;
    text-shadow: 0 1px 1px whiteSmoke;
    border-radius: 5px;
}

.sub-title-active {
	text-shadow: 0 1px 7px whiteSmoke !important;
	background-color: rgba(0, 0, 0, 0.2) !important;
}

#wide-refresh {
	padding: 5px 10px;
	font-size: 15px;
}

/*--- Subreddits ---*/

.subreddit {
    display: box;
    padding-left: 10px;
    border-bottom: 1px solid #CCC;
    border-top: 1px solid white;
    width: 100%;

    > div:first-child {
	    width: 85%;
	    padding: 10px 5px 10px 0;
	}
}

.subreddit-desc {
	margin: 5px 0;
}

.subreddit-title {
    font-weight: 700;
    font-size: 15px;
    margin: 5px 0;
    color: #D43030;
}

.new-form {
    width: 300px;
    background-color: #ddd;
    box-shadow: 0 0 15px black;
    position: absolute;
    z-index: 10000;
    border-radius: 7px;
    padding: 5px;
    left: 50%;
    margin-left: -150px;
}

#form-new-channel {

	min-height: 160px;
	top: 55px;

	input {
	    width: 100%;
	    margin-top: 5px;
	    font-size: 15px;
	    outline: none;
	}
}

#subs-for-channel {

    border-radius: 5px 5px 0 0;
    border: 1px solid #aaa;
    border-bottom: 0;
	margin-top: 5px;
	padding: 0 10px;
	background-color: #FFF;
    max-height: 160px;
	overflow-y: auto;

	input {
	    border: 0;
	    border-bottom: 1px solid #CCC;
	    padding: 5px;

	    &:last-child {
		    border-bottom: 0;
		    padding-bottom: 10px;
		}
	}
}

#txt-channel {
    border: 2px solid #AAA !important;
    border-radius: 5px;
    padding: 5px 10px;
}

.channel-added-msg {
    color: white;
    font-weight: 700;
    padding: 5px 10px;
    margin: 0;
    background-color: #33B300;
    border-radius: 5px;
}

#form-new-sub {
	height: 50px;
	top: 50%;
	margin-top: -100px;

	input {
        @include size(100%, 40px);
		font-size: 20px;
		outline: none;
	}
}

#add-sub-manual {
	padding: 10px;
}

#remove-wrap {
	height: 100%;
}

.edit-subs-title {
    padding: 10px;
    font-weight: 700;
    font-size: 19px;
    margin: 0;
    text-align: center;
    color: #777;
    background-color: rgba(220, 220, 220, 0.4);
    text-shadow: 0 1px 1px whiteSmoke;
}

.remove-list {
	margin: 0;
    padding: 0;
}

.item-to-edit {
    display: flex;
    border-bottom: 1px solid #DDD;
    border-top: 1px solid white;
    height: 60px;

    > p {
	    width: 85%;
	    text-transform: capitalize;
	    font-size: 16px;
	    font-weight: 700;
	    padding-left: 10px;
	}

	> div {
        @include size(15%, 100%);
	    background-repeat: no-repeat;
	    background-position: center;
	}

    .channel-name {
        width: 70%;
    }

    .btn-remove-channel,
    .btn-remove-subreddit {
        background-image: url('../img/delete.png');
        background-size: 22px;
    }

    .btn-edit-channel {
        background-image: url('../img/edit.png');
        background-size: 16px;
    }
}

.show-view {
    transform: translate3d(0, 0, 0);
}

#modal {
    @include size(100%);
    transition-duration: 300ms;
    position: absolute;
	top: 0;
	left: 0;
    background-color: rgba(0,0,0,.7);
    opacity: 0;
    z-index: 9999;
}

.close-form {
    position: absolute;
    top: -30px;
    z-index: 10001;
    right: 0;
    color: whiteSmoke;
    background-image: url('../img/cancel.png');
    width: 60px;
    background-repeat: no-repeat;
    padding-left: 20px;
    font-weight: 700;
    background-size: 18px;
}

.form-left-corner {
    position: absolute;
    top: -30px;
    z-index: 10001;
    left: 0;
}

.about-reeddit,
.move-data {
	top: 80px;
}

.about-reeddit {

	ul {
		list-style: none;
		padding: 0;
	}

	li {
		font-size: 18px;
		text-align: center;

		a {
		    text-decoration: none;
		    letter-spacing: 1px;
		    font-weight: 700;
		    text-shadow: 0 1px 1px white;
		    padding: 12px;
		    display: block;
		    border-top: 1px solid white;
		    border-bottom: 1px solid #999;
		    color: #777;
		}

		a:hover {
			color: inherit;
		}

		&:first-child a {
			border-top: 0;
		}

		&:last-child a {
			border-bottom: 0;
		}
	}

	p {
	    color: #777;
	    text-shadow: 0 1px 1px white;
	    font-size: 12px;
	    text-align: center;
	}

	p a {
		text-decoration: none;
		color: #777;
	}

}

.move-data {

	padding: 20px;

	.btn-general {
		line-height: 26px;
	}

	h3,
	p {
		text-shadow: 0 1px 0 #fff;
	}

	h3 {
		text-align: center;
		margin: 5px 0;
	}

	p {
		text-align: left;
		margin: 10px 0;
	}
}

.move-data-field {
    @include size(100%, 70px);
}

.msg-error {
    background-color: #bbb;
    padding: 5px;
    border-radius: 4px;
    text-shadow: none;
    font-weight: bold;
}

@import 'animations';
@import 'footer';
@import 'themes';
@import 'media-queries';

